<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:layout_marginVertical="@dimen/_10sdp"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:background="@drawable/circle_reg_top"
            android:backgroundTint="@color/online_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_value"
            android:textStyle="bold"
            android:textSize="@dimen/_10ssp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:background="@drawable/circle_reg_top"
            android:backgroundTint="@color/paid_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paid_value"
            android:textStyle="bold"
            android:textSize="@dimen/_10ssp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:background="@drawable/circle_reg_top"
            android:backgroundTint="@color/today_user_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_user_value"
            android:textStyle="bold"
            android:textSize="@dimen/_10ssp"/>

    </LinearLayout>

</LinearLayout>