<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <include layout="@layout/registration_top" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"

                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:elevation="0dp"
                    app:cardCornerRadius="@dimen/_5sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:gravity="center"
                        android:background="@color/element_background_color"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="@dimen/_12sdp"
                                android:layout_height="@dimen/_12sdp"
                                android:layout_marginEnd="@dimen/_3sdp"
                                android:background="@drawable/circle_reg_top"
                                android:backgroundTint="@color/online_color" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/paid"
                                android:textSize="@dimen/_10ssp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:text="@string/twenty"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/paypal"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_weight="1.2"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:elevation="0dp"
                    app:cardCornerRadius="@dimen/_5sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:gravity="center"
                        android:background="@color/element_background_color"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="@dimen/_12sdp"
                                android:layout_height="@dimen/_12sdp"
                                android:layout_marginEnd="@dimen/_3sdp"
                                android:background="@drawable/circle_reg_top"
                                android:backgroundTint="@color/today_user_color" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/on_hold"
                                android:textSize="@dimen/_10ssp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:text="@string/twenty"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/coin_base"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/main_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/welcome"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/login_account"
                android:textSize="@dimen/_11ssp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_45sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_10sdp"
                        android:autofillHints="emailAddress"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_email"
                        android:drawableTint="@color/email_password_color"
                        android:gravity="center_horizontal"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_45sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_10sdp"
                        android:autofillHints="emailAddress"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_password"
                        android:drawableTint="@color/email_password_color"
                        android:gravity="center_horizontal"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:paddingHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:text="@string/sign_up"
                app:cornerRadius="@dimen/_20sdp" />

            <ProgressBar
                android:id="@+id/progress_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_weight="1"
                    android:background="@color/divider_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_12sdp"
                    android:text="@string/or_sign_in_with" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_weight="1"
                    android:background="@color/divider_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_5sdp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp">

                            <ImageView
                                android:layout_width="@dimen/_20sdp"
                                android:layout_height="@dimen/_20sdp"
                                android:src="@drawable/ic_google" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_5sdp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp">

                            <ImageView
                                android:layout_width="@dimen/_20sdp"
                                android:layout_height="@dimen/_20sdp"
                                android:src="@drawable/ic_facebook" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_5sdp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp">

                            <ImageView
                                android:layout_width="@dimen/_20sdp"
                                android:layout_height="@dimen/_20sdp"
                                android:src="@drawable/ic_twitter" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/go_to_registration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:text="@string/sign_up_here"
                    android:textColor="@color/button_color" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>